force-app/main/default/objects/Club__c/fields/Club_Manager__c.field-meta.xml
<CustomField>
    <fullName>Club_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clubs</relationshipName>
    <type>Lookup</type>
</CustomField>