force-app/main/default/objects/Club__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <label>Stadium</label>
    <length>28</length>
    <type>Text</type>
</CustomField>