force-app/main/default/objects/Club__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Club_Manager__c</columns>
    <columns>Stadium__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>